<resources>
    <string name="app_name">TravelMemories</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact us</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <string name="about_us_text">What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>

    <string name="title_activity_maps">MapsActivity</string>
    <!-- add/edit memory activity -->
    <string name="place_name_placeholder">Place name</string>
    <string name="set_location_button">Set location</string>
    <string name="set_date_text">Set date</string>
    <string name="your_location">Your location</string>
    <string name="type_of_travel_text">Type of travel</string>
    <string-array name="types_of_travel_options">
        <item>Business</item>
        <item>Vacation</item>
        <item>Personal</item>
        <item>Others</item>
    </string-array>
    <string name="mood_text">Mood (0- Disappointed; 100- very satisfied)</string>
    <string name="notes_placeholder">Add notes</string>
    <string name="save_button">Save</string>
    <string name="delete_button">Delete</string>
    <string name="weather_button">Weather</string>
    <string name="add_activity_title">Add</string>

    <!-- maps activity -->
    <string name="select_location">Select Location</string>

    <!-- settings activity -->
    <string name="show_map_scale_text">Show map scale</string>
    <string name="app_theme_text">Application theme</string>
    <string-array name="types_of_app_theme">
        <item>Dark</item>
        <item>Light</item>
    </string-array>
    <string name="app_language_text">Application language</string>
    <string-array name="types_of_app_language">
        <item>English</item>
        <item>Romanian</item>
    </string-array>
    <string name="app_map_mode">Map mode</string>
    <string-array name="types_of_app_map_mode">
        <item>Satellite</item>
        <item>Normal</item>
    </string-array>
    <string name="setting_saved_text">Settings saved</string>


    <!-- login activity -->
    <string name="login_button_text">Login</string>
    <string name="passwordLabel">Password</string>
    <string name="usernameLabel">Username</string>

    <!-- logout activity -->
    <string name="logout_text">You have been logged out</string>
</resources>