<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.travelmemories.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.example.travelmemories.ui.aboutUs.AboutUsFragment"
        android:label="@string/about_us"
        tools:layout="@layout/fragment_about_us" />

    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.example.travelmemories.ui.contactUs.ContactUsFragment"
        android:label="@string/contact_us"
        tools:layout="@layout/fragment_contact_us" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.travelmemories.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.travelmemories.ui.logout.LogoutFragment"
        android:label="@string/logout"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.travelmemories.ui.login.LoginFragment"
        android:label="@string/login_button_text"
        tools:layout="@layout/fragment_login" />
</navigation>